staging/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: yas-staging
spec:
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals: ["cluster.local/ns/yas-staging/sa/*"]
